mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-test
spec:
  replicas: 1  #Number of container running-up
  selector: # Pod select label
    matchLabels:
      app: mysql-test
  strategy: #Strategy for our deployment, and behavior
    type: Recreate
  template: # Pod template
    metadata:
      labels:
        app: mysql-test
        tier: database
    spec: #Pod Specification
      containers:
        - name: mysql-test
          image: mysql:5.6
          port:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: database-config
              mountPath: /docker-entrypoint-initdb.d

      volumes: #Pod Specification level resource
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: azure-managed-disk-partition-volume-claim
        - name: database-config
          configMap:
            name: usermanagement-dbcreation
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql-test
  ports:
    - port: 3306
  clusterIP: none
