test01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-exammple
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app-test-deployment
  template:
    metadata:
      name: pod-example
      labels:
        app: web-app-test-deployment
      namespace: default
    spec:
      containers:
        - name: web-app-test-deployment
          image: stacksimplify/kubenginx:3.0.0
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: deployment-lobadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: myapp2
  ports:
    - name: http
      port: 80
      targetPort: 80
