webApp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  labels:
    app: webapp
spec:
  type: LoadBalancer
  selector:
    matchLabels:
      app: webapp
  ports:
    - port: 80
      targetPort: 8080
